--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,10 @@ env/
 # Ignore data files
 /Amazon_Comments_Scrapper/amazon_reviews_scraping/amazon_reviews_scraping/spiders/reviews.json
 /Amazon_Comments_Scrapper/amazon_reviews_scraping/amazon_reviews_scraping/spiders/ProductAnalysis.txt
+
+# Ignore cache files
+news_cache.json
+*.cache
+
+# Ignore database files
+sentimental_analysis/db.sqlite3
