--- a/.github/workflows/code-format.yml
+++ b/.github/workflows/code-format.yml
@@ -21,4 +21,4 @@ jobs:
         pip install black
     - name: Check code formatting
       run: |
-        black . --diff
+        black . --diff --exclude '/(black-master|assests)/'
