--- a/.github/workflows/syntax-checker.yml
+++ b/.github/workflows/syntax-checker.yml
@@ -27,4 +27,4 @@ jobs:
 
     - name: Run Flake8
       run: |
-        flake8 . --exclude=black-master,assests,test,pycodestyle-master
+        flake8 . --exclude=*/test*,black-master,assests,pycodestyle-master
