--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -11,6 +11,12 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: '3.10'
+    - name: Install FFmpeg
+      run: |
+        sudo apt update
+        sudo apt install -y ffmpeg
+    - name: Verify FFmpeg installation
+      run: ffmpeg -version
     - name: Install dependencies
       run: |
         pip install pytest-cov
