--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,12 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.10'
+    - name: Install FFmpeg
+      run: |
+        sudo apt update
+        sudo apt install -y ffmpeg
+    - name: Verify FFmpeg installation
+      run: ffmpeg -version
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
