--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -29,8 +29,8 @@ jobs:
           python -c "import nltk; nltk.download('punkt'); nltk.download('stopwords'); nltk.download('vader_lexicon')"
           export PYTHONPATH=$PYTHONPATH:$(pwd)
           export DJANGO_SETTINGS_MODULE=sentimental_analysis.sentimental_analysis.settings
-          python .\sentimental_analysis\manage.py makemigrations
-          python .\sentimental_analysis\manage.py migrate
+          python ./sentimental_analysis/manage.py makemigrations
+          python ./sentimental_analysis/manage.py migrate
           pytest --ds=sentimental_analysis.sentimental_analysis.settings --cov=./ --cov-config=test/.coveragerc --cov-report=xml
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v4
