--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,6 @@ jobs:
       run: |
         export PYTHONPATH=$PYTHONPATH:$(pwd)
         export DJANGO_SETTINGS_MODULE=sentimental_analysis.sentimental_analysis.settings
-        python .\sentimental_analysis\manage.py makemigrations
-        python .\sentimental_analysis\manage.py migrate
+        python ./sentimental_analysis/manage.py makemigrations
+        python ./sentimental_analysis/manage.py migrate
         pytest --ds=sentimental_analysis.sentimental_analysis.settings
