--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -31,7 +31,7 @@ jobs:
           export DJANGO_SETTINGS_MODULE=sentimental_analysis.sentimental_analysis.settings
           python ./sentimental_analysis/manage.py makemigrations
           python ./sentimental_analysis/manage.py migrate
-          pytest --ds=sentimental_analysis.sentimental_analysis.settings --cov=./ --cov-config=test/.coveragerc --cov-report=xml
+          pytest --cov=./ --cov-config=test/.coveragerc --cov-report=xml
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v4
       with:
