Updated build with newer tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,4 +46,4 @@ jobs:
         export PYTHONPATH=$PYTHONPATH:$(pwd)
         python ./sentimental_analysis/manage.py makemigrations
         python ./sentimental_analysis/manage.py migrate
-        pytest
+        pytest ./sentimental_analysis/realworld/__tests__/test_history_manager.py
