--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -30,7 +30,7 @@ jobs:
           export PYTHONPATH=$PYTHONPATH:$(pwd)
           python ./sentimental_analysis/manage.py makemigrations
           python ./sentimental_analysis/manage.py migrate
-          pytest --cov=./ --cov-config=test/.coveragerc --cov-report=xml
+          pytest test/test_all_functionality.py --cov=test --cov-config=test/.coveragerc --cov-report=xml
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v4
       with:
