Triggering workflow eval
Signed-off-by: a-wright-git <johnwisepic@gmail.com>

--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -37,4 +37,5 @@ jobs:
         file: ./coverage.xml
         verbose: true
       env:
+        # CODECOV_TOKEN must be set up as a repository secret
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
