--- a/requirements.txt
+++ b/requirements.txt
@@ -133,6 +133,7 @@ PySocks==1.7.1
 pytest==7.4.2
 pytest-django==4.11.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
 pytz==2020.1
 PyYAML==6.0.2
 queuelib==1.5.0
