--- a/.github/workflows/syntax-checker.yml
+++ b/.github/workflows/syntax-checker.yml
@@ -28,3 +28,4 @@ jobs:
     - name: Run Flake8
       run: |
         flake8 . --exclude=*/test*,black-master,assests,pycodestyle-master
+      continue-on-error: true
